# anchor

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  config.sh  pyproject.toml  requirements-dev.txt
.claude/commands/: anchor.md  audit.md  commit-prep.md  config.md  draft.md  fleet-watch.md  install-anchor.md  review.md  work.md
.github/workflows/: ci.yml  deploy-docs.yml
.plans/: .gitignore  README.md
anchor/: ANCHOR.md  capacity-routing.md  model-fitness.md
anchor/system-prompts/: mythos-core.md
anchor/templates/: plan.md  review.md  task-spec.md  verification.md
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/blog/: 2026-07-08-introducing-anchor.md  (+23 more)
scripts/: anchor.py  anchor_client.py  benchmark.py  check_docs_sync.py  check_plans.py  endpoints.yaml  fit_device.py  fitness_report.py  fleet_metrics.py  fleet_watch.py  orchestrate.py  pending_merges.py  plan_board.py  plan_fit.py  plan_lease.py  plan_select.py  prompt_tuner.py  roles.py  router.py  scope_gate.py  work_once.py  worktree_for_agent.py
tests/: conftest.py  test_anchor.py  test_anchor_client.py  test_check_docs_sync.py  test_check_plans.py  test_fit_device.py  test_fitness_report.py  test_fleet_metrics.py  test_fleet_watch.py  test_orchestrate.py  test_orchestrate_metrics.py  test_pending_merges.py  test_plan_board.py  test_plan_deps.py  test_plan_fit.py  test_plan_lease.py  test_plan_select.py  test_project_orchestrator.py  test_prompt_tuner.py  test_roles.py  test_router.py  test_scope_gate.py  test_work_once.py  test_worktree_for_agent.py
(+59 files in other folders)
